<resources>

    <string name="app_name">MetroStation</string>

    <string name="pref_notifications">Notification types</string>
    <string name="pref_notification_desc">Notifications are visible only when you are in the metro underground area. It
        is recommended to tune your settings while travelling in metro.
    </string>

    <string name="pref_notification_tray_title">Notification area</string>
    <string name="pref_notification_tray_desc"></string>

    <string name="pref_overlay_title">Always on top</string>
    <string name="pref_overlay_desc">Always visible overlay over any running application.</string>


    <string name="pref_toast_on_arrival_title">Pop-up on arrival</string>
    <string name="pref_toast_on_arrival_desc"></string>

    <string name="pref_toast_on_departure_title">Pop-up on departure</string>
    <string name="pref_toast_on_departure_desc"></string>

    <string name="pref_advanced">Advanced</string>

    <string name="pref_station_predictions_title">Predict next station</string>
    <string name="pref_station_predictions_desc">It may take a station or two to determine direction.</string>

    <string name="pref_cell_logging_title">Cell logging</string>
    <string name="pref_cell_logging_desc">Collect anonymous location data to improve application. No
        personal data will be collected.</string>

</resources>
